# proj_quant_trading

./: .gitignore  Dockerfile  LICENSE  pyproject.toml  requirements-cloud.txt  requirements.txt
configs/: bt_method.yaml  data.yaml  local_test.yaml  run.yaml  run_buyhold.yaml  run_cloud.yaml
configs/base/: cloud_storage.yaml  pipeline.yaml  storage.yaml
configs/connections/: paper_1.yaml  test_paper_account.yaml
configs/datasets/: macro_energy.yaml  sector_5m_intra.yaml  sector_daily_5min_rv.yaml
configs/deployments/: sector_deployment_long.yaml  sector_deployment_long_short.yaml  sector_long_only_paper.yaml  xle_deployment_long_only.yaml  xle_deployment_long_short.yaml
configs/steps/: build_model_table.yaml  cloud_storage.yaml  evaluation.yaml  execution.yaml  ingestion.yaml  sources.yaml  storage.yaml
configs/strategies/: run_buyhold.yaml  run_multi_state.yaml  run_state.yaml  run_svm_state.yaml  sector_state_signal_long_only.yaml  sector_state_signal_long_short.yaml  xle_state_signal.yaml  xle_state_signal_long_only.yaml  xle_state_signal_long_short.yaml
dashboard/: app.py  config.py
dashboard/layout/: main.py  (+3 more)
docs/: architecture.md  backtesting_architecture.md  data_pipeline.md
notebooks/: experiment_macro.ipynb  experiment_state_var.ipynb  experiment_tau_sensitivity.ipynb
results/: metrics.parquet  runs.parquet
scripts/: build_modeling_table.py  build_table.py  ingest_data.py  publish_dashboard_results.py  run_backtest.py  run_pipeline.py
test/: test_backtest.py  test_features.py  test_simulated_portfolio.py  test_sources.py  test_splits.py
(+159 files in other folders)
