[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qbt"
version = "0.1.0"
description = "Private project for quantitiative trading, and data analysis"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]